--- a/cygnus_site/templates/base.html
+++ b/cygnus_site/templates/base.html
@@ -43,6 +43,9 @@
           return false;
         }
       };
+
+
+
     };
     </script>
     <!--
@@ -66,8 +69,8 @@
             </div><!-- ./col-xs-6 #footer-items -->
             <div class="col-xs-12 col-sm-5 col-md-6" id="footer-social">
               <ul class="list-inline text-center">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://www.facebook.com/Cygnussvcs"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/cygnusmgmt"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="mailto:cygnusmgmt2@gmail.com?subject=Questions/Comments"><i class="fa fa-envelope"></i></a></li>
               </ul>
             </div><!-- ./col-xs-6 #footer-social -->
