--- a/cygnus_site/templates/cygnus_site/index.html
+++ b/cygnus_site/templates/cygnus_site/index.html
@@ -6,9 +6,9 @@
   <!-- Navbar, fixed
   ================================================== -->
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
+    <div ng-controller="NavbarCtrl" class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-html="true" data-placement="left" data-animation="am-slide-left" bs-aside="aside">
+        <button type="button" class="navbar-toggle" data-html="true" data-placement="left" data-animation="am-slide-left" data-template="{{ STATIC_URL }}partials/aside.html" bs-aside="aside">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -17,7 +17,7 @@
         <a class="navbar-brand" href="/">CygnusMgmt</a>
       </div>
       <div class="collapse navbar-collapse">
-        <ul ng-controller="NavbarCtrl" class="nav navbar-nav">
+        <ul class="nav navbar-nav">
           <li ng-class="isActive('about') ? 'active':'' "><a href="/about">About</a></li>
 
           <li ng-class="isActive('services') ? 'active':'' " id="navServices">
@@ -25,11 +25,16 @@
           </li>
 
           <li ng-class="isActive('services') ? 'activeCaret':'' " class="navServicesCaret" data-html="true" data-animation="am-slide-top" bs-dropdown="dropdown">
-            <span class="caret"></span>
+            <a><span class="caret"></span></a>
           </li>
 
           <li ng-class="isActive('pricing') ? 'active':'' "><a href="/pricing">Pricing</a></li>
           <li ng-class="isActive('contact') ? 'active':'' "><a href="/contact">Contact</a></li>
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+          <li class="pull-right">(510) 555-5555</li>
+          <li class="pull-right"><i class="fa fa-phone"></i></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -71,7 +76,7 @@
     <br />
 
     <div class="container">
-      <p><a class="btn btn-warning btn-lg pull-right" role="button" href="/services">Learn more &raquo;</a></p>
+      <p><a class="btn btn-warning btn-lg pull-right" role="button" href="/services/?init={% verbatim %}{{ services[slideshow-1][1] }}{% endverbatim %}">Learn more &raquo;</a></p>
     </div>
 
   </div> <!-- ./jumbotron -->
