--- a/cygnus_site/templates/cygnus_site/contact.html
+++ b/cygnus_site/templates/cygnus_site/contact.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}{% load staticfiles %}
 
 {% block content %} <!-- This block content is placed inside of base.html body -->
-<div ng-app="CygnusApp" ng-controller="CygnusCtrl">
+<div id="contact" ng-app="CygnusApp" ng-controller="CygnusCtrl">
   
   <!-- Navbar, fixed
   ================================================== -->
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
+    <div ng-controller="NavbarCtrl" class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-html="true" data-placement="left" data-animation="am-slide-left" bs-aside="aside">
+        <button type="button" class="navbar-toggle" data-html="true" data-placement="left" data-animation="am-slide-left" data-template="{{ STATIC_URL }}partials/aside.html" bs-aside="aside">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -17,7 +17,7 @@
         <a class="navbar-brand" href="/">CygnusMgmt</a>
       </div>
       <div class="collapse navbar-collapse">
-        <ul ng-controller="NavbarCtrl" class="nav navbar-nav">
+        <ul class="nav navbar-nav">
           <li ng-class="isActive('about') ? 'active':'' "><a href="/about">About</a></li>
 
           <li ng-class="isActive('services') ? 'active':'' " id="navServices">
@@ -25,25 +25,43 @@
           </li>
 
           <li ng-class="isActive('services') ? 'activeCaret':'' " class="navServicesCaret" data-html="true" data-animation="am-slide-top" bs-dropdown="dropdown">
-            <span class="caret"></span>
+            <a><span class="caret"></span></a>
           </li>
 
           <li ng-class="isActive('pricing') ? 'active':'' "><a href="/pricing">Pricing</a></li>
           <li ng-class="isActive('contact') ? 'active':'' "><a href="/contact">Contact</a></li>
         </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+          <li class="pull-right">(510) 555-5555</li>
+          <li class="pull-right"><i class="fa fa-phone"></i></li>
+        </ul>
       </div><!--/.nav-collapse -->
     </div>
   </div>
 
-  <!-- Get Started with Cygnus Management
+  <br id="largeGap" />
+
+  <!-- Contact Us Form
   ================================================== -->
-<br><br><br>
-  <div class="container">
-    <h1>Get Started With Cygnus Management<h1>
-    <h1><mute>test</mute></h1>
 
-
-  {{ path }}
+  <div class="contactForm container panel panel-default">
+    <h1 class="text-center">Contact Us<h1>
+    {% verbatim %}
+    <!-- Email Form -->
+    <form role="form" action="mailto:cygnusmgm2@gmail.com?subject=Question/Comment" enctype="text/plain" method="post">
+      <div class="form-group">
+        <label for="contactEmail">Name</label>
+        <input type="text" class="form-control" id="contactEmail" placeholder="Enter name" name="name"></input>
+      </div>
+      <!-- Message Area -->
+      <div class="form-group">
+        <label for="contactMessage">Message</label>
+        <textarea type="text" class="form-control" id="contactMessage" placeholder="Questions/Comments" name="message"></textarea>
+      </div>
+      <input class="btn btn-warning btn-lg pull-right" type="submit" value="Send"></input>
+    </form>
+    {% endverbatim %}
 
   </div>
 
